--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 .main_pole {
 
 	display: inline-block;
-	width: 200px;
+	width: 250px;
 	margin-top: 50px;
 	margin-left: 200px;
 	padding: 10px;
 	border: black medium solid;
 	background-image: radial-gradient( 
 	circle farthest-side at left top, rgba(255, 255, 0, 0.5), rgba(255, 0, 0, 0.5), rgba(0, 0, 255, 0.5));
+}
+.play_pole {
+	width: 170px;
 }
 
 #cell_0 {
@@ -24,4 +27,14 @@
 	height: 17px;
 	border: solid black thin;
 	background-color: rgba(0, 0, 100, 0.7);
+}
+
+#line {
+	float: none;
+}
+
+#death {
+	width: 2000px;
+	height: 2000px;
+	background-color: red;
 }
