--- a/style.css
+++ b/style.css
@@ -33,6 +33,14 @@
 	float: none;
 }
 
+.points {
+	margin-top: 20px;
+	margin-right: 3px;
+	float: right;
+	font-size: 22pt;
+	font-family: 'Ubuntu', sans-serif;
+}
+
 #death {
 	width: 2000px;
 	height: 2000px;
