--- a/style.css
+++ b/style.css
@@ -26,7 +26,39 @@
 	width: 15px;
 	height: 17px;
 	border: solid black thin;
-	background-color: rgba(0, 0, 100, 0.7);
+	background-color: rgba(255, 0, 0, 0.8);
+}
+
+#cell_2 {
+	float: left;
+	width: 15px;
+	height: 17px;
+	border: solid black thin;
+	background-color: rgba(0, 255, 0, 0.8);
+}
+
+#cell_3 {
+	float: left;
+	width: 15px;
+	height: 17px;
+	border: solid black thin;
+	background-color: rgba(0, 0, 255, 0.8);
+}
+
+#cell_4 {
+	float: left;
+	width: 15px;
+	height: 17px;
+	border: solid black thin;
+	background-color: rgba(255, 255, 0, 0.8);
+}
+
+#cell_5 {
+	float: left;
+	width: 15px;
+	height: 17px;
+	border: solid black thin;
+	background-color: rgba(0, 255, 255, 0.8);
 }
 
 #line {
