--- a/style.css
+++ b/style.css
@@ -1,31 +1,36 @@
+body {
+	margin: 0px;
+}
+
 #menu {
+	width: 100%;
+	height: 660px;
+	min-height: 100%;
+	padding-top: 90px;
 	background-image: radial-gradient(
 		circle farthest-side at right top, rgba(255, 255, 0, 0.4), rgba(255, 0, 255, 0.4));
-	margin: 0px;
-	display: inline-block;
 	font-size: 30pt;
 	font-family: 'Ubuntu', sans-serif;
+	text-align: center;
 }
 
-#tit {
-	margin-top: 70px;
-	margin-left: 140px;
-	margin-right: 140px;
-	margin-bottom: 40px;
-}
-
-#lvls {
-	margin-left: 240px;
-	margin-bottom: 100px;
-}
-
-.lvl {
-	float: left;
+#lvl{
+	border: white thin solid;
+	background-color: white;
+	margin-right: 40px;
 	margin-left: 40px;
-	font-size: 16pt;
-	font-family: 'Ubuntu', sans-serif;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	cursor: pointer;
+	border-radius: 28px;
 }
 
+#lvls{
+	margin-top: 90px;
+	font-size: 25pt;
+}
 
 .main_pole {
 	display: inline-block;
