--- a/style.css
+++ b/style.css
@@ -107,7 +107,25 @@ body {
 }
 
 #death {
-	width: 2000px;
-	height: 2000px;
+	width: 100%;
+	height: 800px;
 	background-color: red;
+	padding-top: 120px;
+	text-align: center;
+	font-size: 75pt;
+	color: red;
+	font-family: 'Ubuntu', sans-serif;
+}
+
+#death:hover{
+	width: 100%;
+	height: 800px;
+	background-color: red;
+	padding-top: 120px;
+	text-align: center;
+	font-size: 75pt;
+	color: black;
+	font-family: 'Ubuntu', sans-serif;
+	transition-duration: 3s;
+	animation-fill-mode: forwards;
 }
